fixed alignment in professionalcarditems on first search page

--- a/react-front-end/src/scss/styles/_index.scss
+++ b/react-front-end/src/scss/styles/_index.scss
@@ -87,7 +87,7 @@ footer {
   background-color: white;
   display: flex;
   justify-content: space-between;
-  padding: 25px 54px 2px 54px;
+  padding: 25px 54px 25px 54px;
   font-size: 15px;
 
   h4 {
